methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:17: error: not found: value vubiscuit
  return vubiscuit
         ^